--- a/imports/ui/pages/home/home.html
+++ b/imports/ui/pages/home/home.html
@@ -1,49 +1,3 @@
 <template name="home">
-<div class="container-fluid app-container">
-  <div class="row">
-    <!--<div class="col-xs-12 col-sm-4 col-md-3 col-lg-2" id="sidebar">
-      <div class="list-group">
-        <a routerLink="/genres/{{genre.id}}/{{genre.name}}" routerLinkActive="active" class="list-group-item" *ngFor="let genre of genres">{{genre.name}}</a>
-      </div>
-    </div>-->
-    <div class="col-xs-12 col-sm-4 col-md-3 col-lg-2">
-
-      <nav class="navbar navbar-default" role="navigation">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-2">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-
-        </div>
-        <div class="collapse navbar-collapse" id="navbar-collapse-2">
-        <div class="panel-heading">Our Pick</div>
-          <ul class="nav nav-stacked">
-          	<li><a href="#" class="list-group-item">Top Ranked</a></li>
-          	<li><a href="#" class="list-group-item">Most Liked</a></li>
-          	<li><a href="#" class="list-group-item">Recently Added</a></li>
-          </ul>
-          <hr />
-          <div class="panel-heading">Categories</div>
-          <ul class="nav nav-stacked">
-			<!-- Need to get Categories list -->          
-          </ul>
-        </div>
-      </nav>
-    </div>
-    <!--/end left column-->
-
-    <!--/.sidebar-offcanvas-->
-    <div class="col-xs-12 col-sm-8 col-md-9 col-lg-10">
-    <!-- Main content should go here-->
-    </div>
-    <!--/.col-xs-12.col-sm-9-->
-  </div>
-  <!--/row-->
-  <hr>
-  <footer>
-    <p>&copy; 2016 Company, Inc.</p>
-  </footer>
-</div>
+Home
 </template>
