--- a/client/head.html
+++ b/client/head.html
@@ -6,6 +6,6 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/img/favicon.png">
-    <title>Idea BootCamp</title>
+    <title>E12Rv1</title>
     <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 </head>
