--- a/imports/ui/pages/landing/landing.html
+++ b/imports/ui/pages/landing/landing.html
@@ -1,9 +1,132 @@
 <template name="landing">
-	<div class="container-fluid">
-		<div class="jumbotron">
-		  <h1>Something big coming</h1>
-		  <p>We are working on this... Meantime, feel free to preview app</p>
-		  <p><a href="/browse" class="btn btn-primary btn-lg">Preview App</a></p>
-		</div>
-	</div>	
+    <div id="theme-carousel" class="carousel slide" data-ride="carousel">
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+            <div class="item active">
+                <img src="images/carousel1.jpg" alt="carousel1" style="width: 100%" />
+                <div class="carousel-caption">
+                    <div class="row">
+                        <div class="col-md-5">
+                        </div>
+                        <div class="col-md-7">
+                            <h1>ADVERTISING</h1>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="images/carousel2.jpg" alt="carousel2" style="width: 100%" />
+                <div class="carousel-caption">
+                    <div class="row">
+                        <div class="col-md-7">
+                            <h1>DISTRIBUTION</h1>
+                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="images/carousel3.jpg" alt="carousel3" style="width: 100%">
+                <div class="carousel-caption">
+                    <div class="row">
+                        <div class="col-md-7">
+                            <h1>SELLING</h1>
+                            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Controls -->
+        <a class="left carousel-control" href="#theme-carousel" role="button" data-slide="prev">
+            <div class="carousel-control-arrow">&#8249;</div>
+        </a>
+        <a class="right carousel-control" href="#theme-carousel" role="button" data-slide="next">
+            <div class="carousel-control-arrow">&#8250;</div>
+        </a>
+    </div>
+    <div class="container-home">
+        <div class="container">
+            <div class="page-header" id="home">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h1>WELCOME</h1>
+                        <h4>To Our Company</h4>
+                        <br />
+                        <img class="img-responsive" src="images/image3.jpg" />
+                        <br />
+                        <p class="text-justify">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h2>Good Solutions For Your Business!</h2>
+                        <br />
+                        <h4 class="text-primary"><i class="fa fa-arrow-right" aria-hidden="true"></i>&nbsp; &nbsp;What is Lorem Ipsum?</h4>
+                        <p class="text-justify">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+                        <br />
+                        <h4 class="text-primary"><i class="fa fa-arrow-right" aria-hidden="true"></i>&nbsp; &nbsp;Where does it come from?</h4>
+                        <p class="text-justify">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+                        <br />
+                        <h4 class="text-primary"><i class="fa fa-arrow-right" aria-hidden="true"></i>&nbsp; &nbsp;Where can I get some?</h4>
+                        <p class="text-justify">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="row">
+                            <div class="col-md-3">
+                                <blockquote class="inner-block">
+                                    <span class="fa fa-2x fa-quote-right"></span>
+                                    <p class="block-text">If it is on Internet it must be true.</p>
+                                    <hr>
+                                    <div>
+                                        <p class="pull-left">Albert Einstein</p>
+                                        <p class="pull-right">
+                                            <span class="badge">69</span>&nbsp; &nbsp;<span class="fa fa-heart"></span>
+                                        </p>
+                                    </div>
+                                </blockquote>
+                            </div>
+                        </div>
+                        <div class="row text-center">
+                            <h3 class="text-center text-primary">NEWSLETTER</h3>
+                            <p class="text-center">Use this section to display subscription form of any WordPress plugin or newsletter service</p>
+                            <br />
+                        </div>
+                        <div class="row text-center">
+                            <div class="col-md-8 col-md-offset-2">
+                                <input type="text" class="form-control" placeholder="Enter your email..." />
+                                <br />
+                                <button class="button-more-primary btn" type="button" style="margin: 10px;">SUBSCRIBE</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer id="footer" class="clearfix">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <p>54, North Road, PA 45086, USA</p>
+                    <p>+1 888 455 6677</p>
+                    <p><a href="mailto:mail@example.com" style="color: #4BAFD3;">mail@example.com</a></p>
+                </div>
+                <div class="col-md-4">
+                    <p>Created by <a href="https://www.shieldui.com" title="Shield UI" style="color: #4BAFD3;">Shield UI</a> and hosted by <a href="https://www.prepbootstrap.com" title="PrepBootstrap" style="color: #4BAFD3;">PrepBootstrap</a></p>
+                </div>
+                <div class="col-md-4">
+                    <p>
+                        <a class="fa fa-twitter footer-socialicon" target="_blank" href="https://twitter.com/"></a>
+                        <a class="fa fa-facebook footer-socialicon" target="_blank" href="https://www.facebook.com/"></a>
+                        <a class="fa fa-google-plus footer-socialicon" target="_blank" href="https://plus.google.com/"></a>
+                        <a class="fa fa-linkedin footer-socialicon" target="_blank" href="https://plus.google.com/"></a>
+                    </p>
+                </div>
+
+            </div>
+        </div>
+    </footer>
+    
+
 </template>
