--- a/imports/ui/pages/home/home.html
+++ b/imports/ui/pages/home/home.html
@@ -27,7 +27,7 @@
     <section id="service" class="section-padding">
         <div class="container">
             <div class="row">
-                <div class="col-md-2 col-sm-2">
+                <div class="col-md-2 col-sm-2 hidden-xs hidden-sm ">
 
                    <div class="row"> 
                       <h4 class="ser-title">Categories</h4>
