--- a/imports/ui/pages/idea/createIdea.html
+++ b/imports/ui/pages/idea/createIdea.html
@@ -1,5 +1,71 @@
 <template name="createIdea">
-    {{> Template.dynamic template="createIdeaForm" data=currentUser}}
+  <nav class="navbar navbar-default navbar-fixed-top top-nav-collapse" style="background-color: RGBA(13, 70, 83, 0.78);">
+    <div class="container">
+      <div class="col-md-12">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="{{pathFor 'landing'}}"><img src="img/logo.png" class="img-responsive" style="width: 140px; margin-top: -16px;"></a>
+        </div>
+        <div class="collapse navbar-collapse navbar-right" id="myNavbar">
+          <ul class="nav navbar-nav">
+            <li class=""><a href="{{pathFor 'home'}}">Browse Ideas</a></li>
+            <li class="active"><a href="{{pathFor 'createIdea'}}">New Idea</a></li>
+
+            {{#if currentUser}}
+              <li class=""><a href="{{pathFor 'manageProfile'}}">Settings</a></li>
+              <li class=""><a data-action="logOut">Sign Out</a></li>
+            {{/if}}
+          </ul>
+        </div>
+    </div>
+    </div>
+  </nav>
+	<section id="service" class="section-padding">
+	    <div class="container">
+	        <div class="row">
+	            <div class="col-md-2 col-sm-2">
+					<div class="row"> 
+                      <h4 class="ser-title">Categories</h4>
+                      <hr class="botm-line">
+                      <div class="space"></div>
+                      <p>Top Ranked</p>
+                      <p>Most Liked</p>
+                      <p>Highly Active</p>
+                      <p>Something else</p>
+                      <div class="space"></div>
+                  </div>
+
+                </div>
+                <div class="col-md-10 col-sm-4">
+  
+                  <h4>Try to brief your <strong>Idea here</strong></h4>
+                  <h5><span class="help-block">See the examples here</span></h5>
+                    {{flash}}
+                    {{#autoForm collection=ideaCollection id="insertIdeaForm" type="insert" doc=defaultValues}}
+                      <fieldset>
+                        {{> afQuickField name='refNo' type="text" readonly=true }}
+                          {{> afQuickField name='status' readonly=true }}
+
+                          <div class="form-group {{#if afFieldIsInvalid name='summary'}}has-error {{/if}}" >
+                            {{> afQuickField name='summary' autofocus=''}}
+                          </div>
+
+                          <div class="form-group {{#if afFieldIsInvalid name='description'}}has-error {{/if}}" >
+                            {{> afQuickField name='description' rows=5}}
+                          </div>  
+                         
+                      </fieldset>
+                      <button type="submit" class="btn btn-form">Create Idea</button>
+                      <button type="reset" class="btn btn-default">Reset</button>
+                    {{/autoForm}}
+	              </div>
+	        </div>
+	    </div>
+	</section>
 </template>
 
 
