--- a/imports/ui/pages/profile/manageProfile.html
+++ b/imports/ui/pages/profile/manageProfile.html
@@ -15,20 +15,20 @@
 					</div>
 					<div class="row">
 						<label for="lastName">Last Name</label>
-						<input type="text" name="lastName"  placeholder="Last Name" class="form-control" required="true">
+						<input type="text" name="lastName"  placeholder="Last Name" class="form-control" required="true" value="{{profileData.lname}}">
 					</div>
 					<div class="row">
 						<label for="sex">Sex</label>
-						<select name="sex" class="form-control" required="true">
-							<option value=""></option>
-							<option value="M">Male</option>
-							<option value="F">Female</option>
-							<option value="O">Others</option>
+						<select name="sex" class="form-control" required="true" value="{{profileData.sex}}">
+						 	<option disabled="disabled" selected="selected">Please Select</option> 
+							{{#each gender}}
+								<option value="{{this.key}}">{{this.value}}</option>
+							{{/each}}
 						</select>
 					</div>
 					<div class="row">
 						<label for="address">Address</label>
-						<input type="text" name="address" placeholder="Address" class="form-control">
+						<input type="text" name="address" placeholder="Address" class="form-control" value="{{profileData.address}}">
 					</div>
 
 					<div class="row">
