--- a/imports/ui/pages/profile/manageProfile.html
+++ b/imports/ui/pages/profile/manageProfile.html
@@ -27,6 +27,10 @@
 						</select>
 					</div>
 					<div class="row">
+						<label for="country">Country</label>
+						{{> countryCodeSelect selected=profileData.country props=countrySelectProps}}
+					</div>
+					<div class="row">
 						<label for="address">Address</label>
 						<input type="text" name="address" placeholder="Address" class="form-control" value="{{profileData.address}}">
 					</div>
@@ -42,7 +46,6 @@
 							<button name="save" type="submit" class="btn btn-success btn-lg profile-save" value="save">Save</button>
 						</div>
 					</div>
-					
 				</fieldset>
 		</form>
 	</div>
