Tags Functionality Added

--- a/imports/ui/pages/idea/createIdea.html
+++ b/imports/ui/pages/idea/createIdea.html
@@ -63,7 +63,8 @@
                             <a href="#" class="unpublish">Unpublish</a> 
                           {{/if}}
                           &nbsp; | &nbsp;
-                            Modify &nbsp; Add Tags &nbsp; View Correspondance &nbsp; Invite Friends </p>
+                            Modify &nbsp; 
+                            <a href="#" class="addTagsModal">Add Tags</a> &nbsp; View Correspondance &nbsp; Invite Friends </p>
                             <div class="caption">
                                 <h4>
                                   {{summary}} &nbsp;
