--- a/imports/ui/pages/profile/manageProfile.html
+++ b/imports/ui/pages/profile/manageProfile.html
@@ -7,7 +7,7 @@
 				<fieldset>
 					<div class="row">
 						<label for="userName">User Name</label>
-						<input type="text" name="usreName" class="form-control" value="{{userId}}" disabled>
+						<input type="text" name="userName" class="form-control" value="{{userId}}" disabled>
 					</div>
 					<div class="row">
 						<label for="firstName">First Name</label>
