--- a/imports/ui/pages/landing/landing.html
+++ b/imports/ui/pages/landing/landing.html
@@ -19,7 +19,7 @@
 
                 {{#if currentUser}}
                   <li class=""><a href="{{pathFor 'manageProfile'}}">Settings</a></li>
-                  <li class=""><a data-action="logOut">Sign Out</a></li>
+                  <li class=""><a href="#" data-action="logOut">Sign Out</a></li>
                 {{/if}}
               </ul>
             </div>
